<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="@dimen/img_width2"
        android:layout_height="@dimen/SOlogo"
        android:src="@drawable/sologo"
        android:layout_margin="@dimen/seperator_margin"
        android:id="@+id/imgSOlogo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:textSize="@dimen/main_title"
        android:gravity="center"
        android:id="@+id/tv_testnaam"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vraag1"
        android:textSize="@dimen/personavraag_vraag_textsize"
        android:gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/tv_persona_vraagnr"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/testvraag"
        android:text="@string/persvraag1"
        android:textSize="@dimen/testvraag_vraag_textsize"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_persvraag"
        android:id="@+id/tv_personavraag"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/man"
            android:layout_marginStart="@dimen/marginL"
            android:layout_marginTop="@dimen/marginT"
            android:layout_marginEnd="@dimen/marginR"
            android:layout_marginBottom="@dimen/marginB"
            android:layout_weight="2"
            android:id="@+id/btn1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/vrouw"
            android:layout_marginStart="@dimen/marginR"
            android:layout_marginTop="@dimen/marginT"
            android:layout_marginEnd="@dimen/marginL"
            android:layout_marginBottom="@dimen/marginB"
            android:layout_weight="2"
            android:id="@+id/btn2"/>

    </LinearLayout>

</LinearLayout>