<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/armoede">

    <ImageView
        android:layout_width="@dimen/img_width2"
        android:layout_height="@dimen/SOlogo"
        android:src="@drawable/sologo"
        android:layout_margin="@dimen/seperator_margin"
        android:id="@+id/imgSOlogo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:layout_marginBottom="@dimen/seperator_margin"
        android:gravity="center"
        android:textSize="@dimen/main_title"
        android:text="@string/main_title"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/main_uitleg"
        android:layout_marginStart="@dimen/margin_horizontal"
        android:layout_marginEnd="@dimen/margin_horizontal"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_vertical_margin"
        android:text="@string/starttest"
        android:textSize="@dimen/testvraag_alternatief_thema_textsize"
        android:id="@+id/btnStarttest"
        android:layout_marginTop="@dimen/margin_vertical"
        android:layout_marginBottom="@dimen/margin_vertical"
        android:layout_marginStart="@dimen/margin_horizontal"
        android:layout_marginEnd="@dimen/margin_horizontal"
        android:layout_weight="3"/>
</LinearLayout>