<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="be.kdg.ip_r_androidapp.vragen.Testvraag">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/testvraag"
        android:id="@+id/tvTestvraag"
        android:textSize="@dimen/testvraag_vraag_textsize"
        android:text="@string/voorbeeldtestvraag"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/seperator"
        android:background="@android:color/darker_gray"
        android:layout_below="@id/tvTestvraag"
        android:id="@+id/seperator"
        android:paddingTop="@dimen/seperator_margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/seperator"
        android:paddingTop="@dimen/seperator_margin"
        android:orientation="vertical">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:id="@+id/lvKeuze1"
        android:paddingTop="@dimen/activity_vertical_margin">
    </ListView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:id="@+id/btnKeuze1"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/btn1"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:id="@+id/lvKeuze2"
        android:paddingTop="@dimen/activity_vertical_margin">
    </ListView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:id="@+id/btnKeuze2"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/btn2"/>

    </LinearLayout>
</RelativeLayout>