<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/SOlogo"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/marginBottom">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/sologo"
            android:id="@+id/imgSOlogo"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="@dimen/testvraag_alternatief_thema_textsize"
            android:text="@string/thema"
            android:layout_weight="2"
            android:layout_marginTop="@dimen/seperator_margin"
            android:layout_marginBottom="@dimen/seperator_margin"
            android:layout_marginEnd="@dimen/seperator_margin"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:id="@+id/tvThema"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:text="@string/voorbeeldtestvraag"
        android:textSize="@dimen/testvraag_vraag_textsize"
        android:layout_weight="3"
        android:id="@+id/tvTestvraag"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/seperator"
        android:background="@android:color/darker_gray"
        android:id="@+id/seperator"
        android:layout_margin="@dimen/seperator_margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_weight="5">

        <ListView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/lvKeuze1"
            android:layout_weight="3"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/btnKeuze1"
            android:layout_weight="2"
            android:text="@string/btn1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_weight="5">

        <ListView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/lvKeuze2"
            android:layout_weight="3"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/btnKeuze2"
            android:layout_weight="2"
            android:text="@string/btn2"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/seperator"
        android:background="@android:color/darker_gray"
        android:id="@+id/seperator2"
        android:layout_margin="@dimen/seperator_margin"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_weight="4"
        android:background="@android:color/background_light"/>

</LinearLayout>